--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -8,4 +8,28 @@
   	<error-code>500</error-code>
   	<location>/exception/main_server_downtime.jsp</location>
   </error-page>
+
+	<security-role>
+		<description></description >
+		<role-name>admin</role-name>
+	</security-role>
+	<security-constraint>
+		<display-name>WebMarket Security_01</display-name>
+		<web-resource-collection>
+			<web-resource-name>WebMarket</web-resource-name>
+			<description></description>
+			<url-pattern>/admin/product_add.jsp</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<description>권한 관리자명</description>
+			<role-name>admin</role-name>
+		</auth-constraint>
+	</security-constraint>
+    <login-config>
+		<auth-method>FORM</auth-method>
+		<form-login-config>
+			<form-login-page>/login/login.jsp</form-login-page>
+			<form-error-page>/login/login_failed.jsp</form-error-page>
+		</form-login-config>
+	</login-config>
 </web-app>
